--- a/style.css
+++ b/style.css
@@ -13,7 +13,9 @@
   width: 80vw;
   margin: auto;
 }
-
+.text-white {
+  color: white;
+}
 header {
   background: url("images/banner/banner3.png");
   background-repeat: no-repeat;
@@ -129,10 +131,13 @@ header {
   justify-content: center;
   margin-top: 50px;
 }
+.last {
+  margin-bottom: 130px;
+}
 .positive-main {
   margin: auto;
   width: 1124px;
-  background: url("images/watch.png"), linear-gradient(90deg, #005fac 0%, rgba(0, 95, 172, 0) 100%);
+  background: linear-gradient(90deg, #005fac 0%, rgba(0, 95, 172, 0) 100%), url("images/watch.png");
   background-repeat: no-repeat;
   background-size: cover;
   padding: 60px;
@@ -142,4 +147,49 @@ header {
 /*   -------------------------- footer ------------------------------------------- */
 footer {
   padding: 50px;
+  background-color: #151414;
+  color: white;
+}
+/* ------------------------------------ footer ----------------------- */
+.social-icon li {
+  background-color: white;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+}
+.social-icon li .fa-facebook-f {
+  color: #006aff;
+}
+.social-icon li .fa-twitter {
+  color: #1da1f2;
+}
+.social-icon li .fa-youtube {
+  color: #ff0000;
+}
+.social-icon {
+  gap: 20px;
+  margin: 20px 0;
+  display: flex;
+}
+.footer-content {
+  display: grid;
+  gap: 0 50px;
+  grid-template-columns: repeat(2, 1fr);
+}
+.future {
+  width: 60%;
+}
+.footer-title {
+  color: white;
+  text-align: left;
+}
+.mail-phone {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  gap: 10px;
 }
